--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
-  text-align: center;
+:root {
+  --main-black: #2B283A;
+  --main-red: #F55A5A;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  padding: 0;
+  font-family: 'Inter';
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  background-color: var(--main-red);
+  color: white;
+  letter-spacing: -0.075em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.nav--title {
+  font-weight: 500;
+  line-height: 1em;
+}
+
+.nav--icon {
+  font-size: 30px;
+}
+
+.cards {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #F5F5F5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card:last-child {
+  border-bottom: none;
+}
+
+.card--img {
+  margin-right: 30px;
+  margin-left: 0;
+}
+
+.card img {
+  width: 325px;
+  height: 398px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.location {
+  margin-top: 30px;
+  font-size: 17px;
+}
+
+.card--icon {
+  color: var(--main-red);
+  font-size: 15px;
+  padding: 0 5px;
+}
+
+.location--city {
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+  color: var(--main-black);
+}
+
+.location a {
+  color: gray;
+  padding-left: 20px;
+}
+
+.card--title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
+  color: var(--main-black);
+  margin-top: -10px;
+  margin-bottom: 0;
+}
+
+.card--dates {
+  padding-top: 30px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 12px;
+  color: var(main--black);
+}
+
+.card--description {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
+  color: var(main--black);
+  letter-spacing: 0.006em;
+  max-width: 450px;
+}
+
+
+@media screen and (max-width: 1200px) {
+  .card img {
+    margin-top: 38px;
+    width: 225px;
+    height: 268px;
+    float: right;
   }
-  to {
-    transform: rotate(360deg);
+
+  .card {
+    width: 80%;
+  }
+
+  .card--title {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .card img {
+    width: 125px;
+    height: 168px;
+  }
+
+  .location {
+    font-size: 14px;
+  }
+
+  .card {
+    width: 75%;
+    display: flex;
+
+  }
+
+  .location a {
+    font-size: 16px;
+    padding-left: 5px;
+  }
+
+  .card--title {
+    font-size: 16px;
+  }
+
+  .card--dates {
+    padding-top: 5px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 12px;
+  }
+
+  .card--description {
+    font-size: 14px;
+  }
+
+}
+
+@media screen and (max-width: 350px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card img {
+    float: center;
+    width: 80%;
   }
 }
